0.50.0, tba , 2017
-Enable input of Crl characters using a popup or Ctrl+<x>
0.40.0, January 12, 2017
-First implementation of searching the output
-Linked line termination of displayed data 
 with the option (LF, CRLF, CR, ...) for user input.
-compress/combine multiple non printable characters into one expression
 in case the same non printable characters is beeing received multiple
 times in a sequence
-enable a mix from hex and ascii characters in hex input mode

0.30.4, October 15th, 2016
-Disable RTS/DTR when no flow control is used
-man page update
-licenses cleanup
0.30.3, February 15th, 2016
-now builds and runs using Qt5 versions less than 5.3
-performance tuning by switching to QPlainTextEdit

0.30.2, January 11th, 2016
-opening a connnection with more than 200000 Baud not possible - FIX
-custom baud rate not restored - FIX
-extra long lines are wrapped - less disturbing

0.31.1, December 21th, 2015
-fixed a bug preventing to compile on gcc 5.2

0.30.0, December 18th, 2015
-first public release of the reimplemented version

0.25.0, November 30th, 2015
-first preview of reimplemented version
-facelifted GUI
-full session support
-feature enhancements collected from various forks
-timestamp prefix
-display control characters
-requires Qt > 5.1 

0.23.0, October 27th, 2015
-ported partly to Qt5
-made named sessions available via command line option (-s)

0.22.0, June 27th, 2009
-CuteCom now also works on Mac OS X, patch by Oliver Klauke
-support for more baudrates
-install man page to <prefix>/share/man/man1 instead to <prefix>/man/man1 
 (seems to be more standard conform)
-require Qt >= 4.1.0 (0.21.0 required 4.3)

0.21.0, May 11th, 2009
-disconnect from the device if it disappears, e.g. from USB, patch by Bjoern Spruck
-less Qt3Support usage

0.20.0, Mar 12th, 2008
-ported to Qt4, using the patches from Federico Fuga and Michael G. Hansen
-same features as 0.14.2 otherwise

0.14.2, Jan 26th, 2007